Dataset/Prep/prep_hcp-9768843.out
Traceback (most recent call last):
  File "prep.py", line 15, in <module>
    from Dataset.Prep.prep_abide import prep_abide, prep_hcp
  File "/projects/alar6830/BolT/Dataset/Prep/prep_abide.py", line 42
    print(out)
        ^
SyntaxError: invalid syntax
done prepping
